--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                         <a href="http://www.fahuidai.com/">
                             <img src="img/swiper/fa.ico" alt="">
                             <div class="cover">
-                                <span>法汇贷</span>
+                                <span></span>
                             </div>
                         </a>
                     </div>
@@ -294,12 +294,12 @@
                     </div>
                     <div class="text2">
                         <h4>2014年5月至2015年7月</h4>
-                        <p>中科聚网有限公司</p>
+                        <p>腾岳科技</p>
                         <p>负责公司相关业务前端页面的开发，JS逻辑实现以及配合后台实现数据交互等。</p>
                     </div>
                     <div class="text3">
                         <h4>2015年8月至2017年2月</h4>
-                        <p>北京荣鼎汇丰投资管理有限公司，运用jquery angular等页面效果功能，与团队沟通配合，保证产品质量和需求</p>
+                        <p>衣有道，运用jquery angular等页面效果功能，与团队沟通配合，保证产品质量和需求</p>
                     </div>
                     <!--<div class="text4">
                         <h4>2010年9月至2014年6月</h4>
